<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sketch</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_toggle_colors">Color Picker</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save Sketch</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>

    <string name="about_markers">For something more full featured, check out Markers.</string>
    <string name="about_sketch_version">Sketch 1.2.1</string>
    <string name="about_credits">by Matt Marchany</string>

    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_dark_gray">Dark Gray</string>
    <string name="color_gray">Gray</string>
    <string name="color_green">Green</string>
    <string name="color_light_gray">Light Gray</string>
    <string name="color_magenta">Magenta</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>

    <string-array name="color_array">
        <item>@string/color_black</item>
        <item>@string/color_blue</item>
        <item>@string/color_cyan</item>
        <item>@string/color_dark_gray</item>
        <item>@string/color_gray</item>
        <item>@string/color_green</item>
        <item>@string/color_light_gray</item>
        <item>@string/color_magenta</item>
        <item>@string/color_red</item>
        <item>@string/color_yellow</item>
    </string-array>

    <string name="dialog_clear_title">Clear</string>
    <string name="dialog_clear_message">Erase your sketch?</string>
    <string name="dialog_color_title">Choose a color</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="toast_clear">Sketch cleared.</string>
    <string name="toast_color">Color changed.</string>
    <string name="toast_save_success">Image saved to gallery.</string>
    <string name="toast_save_error">Error saving image.</string>

</resources>
